<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="top|left"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_comment" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_news" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_displays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_displays" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_shop" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>